--- a/sites/all/modules/vsite/vsite_help/help/Blog-feature.html
+++ b/sites/all/modules/vsite/vsite_help/help/Blog-feature.html
@@ -1,17 +1,10 @@
-<div id="node-80" class="node">
-
-
-
-      <span class="submitted">Wed, 08/26/2009 - 16:34 — <a href="/user/1" title="View user profile.">admin</a></span>
-  
-  <div class="content clear-block">
-    <p>(tbd)</p>
-  </div>
-
-  <div class="clear-block">
-    <div class="meta">
-        </div>
-
-      </div>
-
-</div>
+<div id="node-30" class="node node-mine node-type-help">
+  <div class="node-inner">
+                      <div class="meta">
+                  <div class="submitted">
+            Wed, 09/23/2009 - 12:26          </div>
+                      </div>
+        <div class="content">
+          </div>
+      </div> <!-- /node-inner -->
+</div> <!-- /node -->
