--- a/sites/all/modules/vsite/vsite_help/help/Links-feature.html
+++ b/sites/all/modules/vsite/vsite_help/help/Links-feature.html
@@ -1,16 +1,10 @@
-<div id="node-82" class="node">
-
-
-
-      <span class="submitted">Wed, 08/26/2009 - 16:35 — <a href="/user/1" title="View user profile.">admin</a></span>
-  
-  <div class="content clear-block">
-      </div>
-
-  <div class="clear-block">
-    <div class="meta">
-        </div>
-
-      </div>
-
-</div>
+<div id="node-31" class="node node-mine node-type-help">
+  <div class="node-inner">
+                      <div class="meta">
+                  <div class="submitted">
+            Wed, 09/23/2009 - 12:27          </div>
+                      </div>
+        <div class="content">
+      <p>The Links feature will enable you to post and manage links to external web pages that have relevance. You also have the ability categorize links and associate images or files with links. You might want to post links to your current or past projects, affiliated institutions, web articles of interest, etc. Your links will be automatically and neatly formatted using the title that you provide.&nbsp; All of your links can be viewed by clicking on "Links" in the primary menu of your site. Visitors can also find specific links by browsing the category that you have selected for it.</p>    </div>
+      </div> <!-- /node-inner -->
+</div> <!-- /node -->
