--- a/sites/all/modules/vsite/vsite_help/help/Features.html
+++ b/sites/all/modules/vsite/vsite_help/help/Features.html
@@ -1,17 +1,14 @@
-<div id="node-66" class="node">
-
-
-
-      <span class="submitted">Wed, 08/26/2009 - 15:36 — <a href="/user/1" title="View user profile.">admin</a></span>
-  
-  <div class="content clear-block">
-    <p>(tbd)</p>
-  </div>
-
-  <div class="clear-block">
-    <div class="meta">
-        </div>
-
-      </div>
-
-</div>
+<div id="node-28" class="node node-mine node-type-help">
+  <div class="node-inner">
+                      <div class="meta">
+                  <div class="submitted">
+            Wed, 09/23/2009 - 12:26          </div>
+                      </div>
+        <div class="content">
+      <p>Features provide sections of your site that pertain to a specific kind of content, such as a blog, publication or announcement. You can enable or disable features individually within the Control Panel.&nbsp; Most features come with helper elements to assist with publishing and managing your content, including:</p>
+<p><strong>Menu Entry</strong> -&nbsp; Most features will automatically create a link in your site's primary menu that will show all the content&nbsp; of the feature. So, if you enable the "Announcement" feature, an "Announcement" link appear in your primary menu that will display all of your announcements.</p>
+<p><strong>Widget</strong> - Think of a widget as a block that contains web content of some sort. This "web content" could be a variety of things, from a list of featured posts, to a gallery of recent images, to a site search tool. The great thing about widgets is that you can choose where they appear within your site's layout. The Control Panel provides and easy way to arrange your widgets by dragging and dropping them to marked sections of your site's layout.</p>
+<p>Features are can be enabled or disabled in the Control Panel. See <a href="64"> Managing Features</a>.</p>
+    </div>
+      </div> <!-- /node-inner -->
+</div> <!-- /node -->
