additions and changes to the theming docs

--- a/sites/all/modules/vsite/vsitehelp/help/Testing-your-theme.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Testing-your-theme.html
@@ -1,6 +1,8 @@
 <div id="node-63" class="node node-mine node-type-help">
   <div class="node-inner">
-            <div class="content">
-      <p>To test your theme's CSS we have a themer kit which can be downloaded. The kit contains a dummy index.html file with the Scholar Web Sites Project base theme, all in a directory called scholar_theme_kit. The dummy index.html file also has a link to a blank css file called my-theme.css. This is where you should work. Add background images to the supplied images directory.</p>    </div>
-      </div> <!-- /node-inner -->
+    <div class="content">
+      <p>To test your custom theme's CSS we have a themer kit <a href="path:themer_test_kit.zip">which can be downloaded</a>. The kit contains a dummy mini-site of files with typical markup and with links to the live base theme, as well as links to a blank css file called my-theme.css. This is where you should work. Add background images to the supplied images directory.</p>
+      <p>The files may be dropped onto Firefox or another standards-compliant browser to view as you work. (Note: We've found that Dreamweaver does not accurately render the base CSS.)</p>
+    </div>
+  </div> <!-- /node-inner -->
 </div> <!-- /node -->
