--- a/sites/all/modules/vsite/vsitehelp/help/Events-feature.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Events-feature.html
@@ -15,7 +15,7 @@ The <strong> Mini Calendar </strong> widget is a compact sized block of your cal
 <br />
 The <strong> Upcoming Events </strong> widget is a block which automatically displays up to five latest upcoming events.</p> 
 
-<p>The widgets are displayed by default in blocks on the right region of you web layout. You can customize the placement of all of your sites widgets within the Control Panel. More information is available in at link. The Scholar Events feature also comes with customizable options within the Control Panel by clicking on the "Features" button, then on the corresponding "customize" link for the feature. The feature's customization form will allow you to change the default "Calendar" menu link. You can also rename the "Upcoming Events widget.
+<p>The widgets are displayed by default in blocks on the right region of you web layout. You can customize the placement of all of your sites widgets within the Control Panel. The Scholar Events feature also comes with customizable options within the Control Panel by clicking on the "Features" button, then on the corresponding "customize" link for the feature. The feature's customization form will allow you to change the default "Calendar" menu link. You can also rename the "Upcoming Events widget.
 </p>
 
 
