--- a/sites/all/modules/vsite/vsitehelp/help/Events-feature.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Events-feature.html
@@ -1,16 +1,12 @@
 <div id="node" class="node node-mine node-type-help">
   <div class="node-inner">
             <div class="content">
-	<p>The Scholar Events feature allows you to post and manage your scheduled events on your web site. Enabling this feature will provide an Events 
-section on your web and a primary menu link called "Calendar". Clicking on the "Calendar" link will display of the current month's calendar. 
+	<p>The Scholar Events feature allows you to post and manage your scheduled events on your web site. Enabling this feature will provide an Events section on your web and a primary menu link called "Calendar". Clicking on the "Calendar" link will display of the current month's calendar. 
 </p>
-You can enter events directly into the calendar by hovering over a calendar day and clicking on the <strong> + Add </strong> button when it appears. After clicking on the <strong> + Add </strong> button, the create event form will load. Fill out all applicable fields in the form regarding your event and click "Save" at the bottom.
-After saving your event, you should see your event highlighted in the monthly calendar. In addition, if you click on the <strong> Upcoming </strong> tab, a list of saved upcoming events will be displayed. You can also add new events by clicking on the red <strong> + Add Event </strong> link within the Events section of your site.
+You can enter events directly into the calendar by hovering over a calendar day and clicking on the <strong> + Add </strong> button when it appears. After clicking on the <strong> + Add </strong> button, the create event form will load. Fill out all applicable fields in the form regarding your event and click "Save" at the bottom. After saving your event, you should see your event highlighted in the monthly calendar. In addition, if you click on the <strong> Upcoming </strong> tab, a list of saved upcoming events will be displayed. You can also add new events by clicking on the red <strong> + Add Event </strong> link within the Events section of your site.
+</p>
 
-</p>
-<p>
-The Scholar Events feature also comes with two widgets:
-</p><p>
+<p><strong>The Scholar Events feature also comes with two widgets:</strong></p>
 The <strong> Mini Calendar </strong> widget is a compact sized block of your calendar and its events.
 <br />
 The <strong> Upcoming Events </strong> widget is a block which automatically displays up to five latest upcoming events.</p> 
