--- a/sites/all/modules/vsite/vsitehelp/help/Profiles-feature.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Profiles-feature.html
@@ -10,5 +10,5 @@
                          <p>  The Profile feature settings allow you to customized the names of the primary menu link "People" and the name of the widget "Categories". To access any feature's settings, go to the control panel and select "Features" and click on the feature's corresponding "customize" link.
               </p>
 	</div>
-      </div> <!-- /node-inner -->
-</div> <!-- /node -->
+  </div>
+</div>
