--- a/sites/all/modules/vsite/vsitehelp/help/Front-feature.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Front-feature.html
@@ -2,13 +2,18 @@
   <div class="node-inner">
             <div class="content">
   
-            <p>The Front feature allows you to customize the the content on your front page. It comes with two default widgets:
-            "Announcements" and "Upcoming events".
+            <p>The Front feature allows you to customize the content on your front page. It comes with two default widgets:
+            <strong>Announcements</strong> and <strong>Upcoming events</strong>. By default these widgets will appear in 
+          the right sidebar. 
             
                        
 </p>
   <p>
+You can customize the settings of this feature by navigating to the <strong>features</strong> section of the control panel and selecting the corresponding "customize" link.  Within the feature's settings you can customize the names of the two default widgets. You can also select which content will be displayed on your site's front page:
 
+<p> <strong>Posts from specific feature(s)</strong></p>
+<p><strong>One of your posts</strong></p>
+<p><strong>Hand-pick content as you go </strong></p>
   
   </p>
 	</div>
