--- a/sites/all/modules/vsite/vsitehelp/help/Reader-feature.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Reader-feature.html
@@ -24,7 +24,7 @@ The feeds that you add to your site will automatically appear in the "Feeds" sec
 <p><h3> Widgets </h3></p>
 The Reader feature comes with three default widgets:
 
-<p><strong> Categories</strong> - The categories that you have listed when you saved your feeds will all be listed here. This widget allows users to view feed items based on their category selection. Cateories are very useful in classfying feed content. Users may find it convenient to find a variety feed items that fall under their area of interest.</p>
+<p><strong> Categories</strong> - The categories that you have listed when you saved your feeds will all be listed here. This widget allows users to view feed items based on their category selection. Categories are very useful in classifying feed content. Users may find it convenient to find a variety feed items that fall under their area of interest.</p>
 <p><strong> Latest news</strong> - The 10 most recent feed items will be listed in this widget. These list items will refresh as new feeds content aggregates.</p> 
 <p><strong> Feed subscriptions</strong> - This widget will list your feed subscriptions. This may useful to user who would like to see the source(s) of your feed content.</p>
 
