--- a/sites/all/modules/vsite/vsitehelp/help/Reader-feature.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Reader-feature.html
@@ -22,11 +22,13 @@
 The feeds that you add to your site will automatically appear in the "Feeds" section for your site. The latest feed items will also appear in the default widget called "Latest news". 
 </p>
 <p><h3> Widgets </h3></p>
-The Reader feature comes with three default widgets:
+The Reader feature comes with default widgets:
 
 <p><strong> Categories</strong> - The categories that you have listed when you saved your feeds will all be listed here. This widget allows users to view feed items based on their category selection. Categories are very useful in classifying feed content. Users may find it convenient to find a variety feed items that fall under their area of interest.</p>
 <p><strong> Latest news</strong> - The 10 most recent feed items will be listed in this widget. These list items will refresh as new feeds content aggregates.</p> 
 <p><strong> Feed subscriptions</strong> - This widget will list your feed subscriptions. This may useful to user who would like to see the source(s) of your feed content.</p>
+
+<p><strong>AddThis button</strong> - The AddThis button allows users to share your site's content to social networking sites by book creating shared bookmark lists.</p>
 
 <p><h3>Feature settings  </h3>  </p>
 <p>You can customize the name of the "Feeds" primary menu link as well as the names of your widgets  by navigating to the <strong>Features</strong> section of the control panel and selecting the corresponding "customize" link. </p>
