--- a/sites/all/modules/vsite/vsitehelp/help/Booklet-feature.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Booklet-feature.html
@@ -2,19 +2,19 @@
   <div class="node-inner">
             <div class="content">
  
-            <p>The Booklet feature allows you to create pages that can have a hierarchical relationship to one other, much like a table of contents. This kind of structuring is useful for publishing things like sections of a manual.
- This feature allows related pages to be better organized and provides sensible and direct way for users to navigate though your booklet pages.
+            <p>The Booklet feature allows you to create pages that can have a hierarchical relationship to one another, much like a table of contents. This kind of structuring is useful for publishing things like sections of a manual.
+ The hierarchical relationship between pages is a way to organize related content and provides sensible and direct way for users to navigate though your booklet pages.
 </p>
 <p>
-<h2> Creating booklets and  pages</h2>
-New Booklets are created when creating a booklet page. To add a booklet page, browse to the "Documents" section of your site and click on the <strong> + Add booklet page</strong> link. Next, you will see a form in which you can begin entering your booklet page information. In the booklet page form you will see a  "book outline" drop-down list which will contain your booklet designation for the page.
+<h2> Creating booklets and pages</h2>
+New Booklets are created when creating or editing a booklet page. To add a booklet page, browse to the "Documents" section of your site and click on the <strong> + Add booklet page</strong> link. Next, you will see a form where you can enter your booklet page information. In the booklet page form, you will see a  "book outline" drop-down list which will contain the booklet designation for the page you are creating or editing:
 <ul>
 <p><li>To make your page part of a new booklet, select the following from the drop-down list:  <strong>  '< create a new book >' </strong></li></p>
 
 <p><li>If you have at least one booklet saved, you can choose which booklet that the new page will belong to by selecting the name of a booklet from the drop-down list.</li></p>
 </ul>
 
-<p>Complete the all other applicable fields (title, body, tags, etc.). When you save the form, the page and booklet information will be saved/created.
+<p>Complete the all other applicable fields (Title, Body, Tags, etc.). When you save the form, the page and booklet information will be saved/created.
 
 </p>
 <h2> Adding a child  page</h2>
