--- a/sites/all/modules/vsite/vsitehelp/help/Booklet-feature.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Booklet-feature.html
@@ -14,7 +14,7 @@ New Booklets are created when creating or editing a booklet page. To add a bookl
 <p><li>If you have at least one booklet saved, you can choose which booklet that the new page will belong to by selecting the name of a booklet from the drop-down list.</li></p>
 </ul>
 
-<p>Complete the all other applicable fields (Title, Body, Tags, etc.). When you save the form, the page and booklet information will be saved/created.
+<p>Complete the all other applicable fields (Title, Body, tags, etc.). When you save the form, the page and booklet information will be saved/created.
 
 </p>
 <h2> Adding a child  page</h2>
