--- a/sites/all/modules/vsite/vsitehelp/help/Booklet-feature.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Booklet-feature.html
@@ -26,11 +26,11 @@ Because booklet pages can have a hierarchical relationship, pages that placed on
 <h2> Booklet Settings</h2>
 You can customize your Booklet feature settings by navigating to the <strong>Features</strong> section of the control panel and selecting the corresponding "customize" link.
 
-By default the Booklet features provides primary menu link  on your site called "Documents". However you can customize the name of this menu link in the Booklet settings form.
+By default, the Booklet features provides primary menu link  on your site called "Documents". However you can customize the name of this menu link in the Booklet feature's settings form.
 </p>
 <p>
 <p><strong> Widgets</strong></p>
-The Booklet features comes with one widget that will appear by default in the right sidebar within the "Documents" section of you site. This widget will display a list of your booklets and users will be able to click on the booklet titles to view the booklet's content.
+The Booklet features comes with a widget that will appear by default in the right sidebar within the "Documents" section of you site. This widget will display a list of your booklets and users will be able to click on the booklet titles to view the content.
 
 </p>
 
