--- a/sites/all/modules/vsite/vsitehelp/help/Booklet-feature.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Booklet-feature.html
@@ -19,7 +19,7 @@ New Booklets are created when creating or editing a booklet page. To add a bookl
 </p>
 <h2> Adding a child  page</h2>
 </p>
-Because booklet pages can have a hierarchical relationship, pages that placed one-level down from an existing page or booklet, are called "Child" pages. To add a child page to an existing booklet page, browse to the existing page and click the <strong> Add child page </strong> link at the bottom. This will load the add booklet page from and automatically set it as a child page.
+Because booklet pages can have a hierarchical relationship, pages that placed one-level down from an existing page or booklet, are called "child" pages. To add a child page to an existing booklet page, browse to the existing page and click the <strong> Add child page </strong> link at the bottom. This will load the add booklet page from and automatically set it as a child page.
 </p>
  
 <p>
