--- a/sites/all/modules/vsite/vsitehelp/help/FAQ.html
+++ b/sites/all/modules/vsite/vsitehelp/help/FAQ.html
@@ -104,7 +104,7 @@
            
            
               <p>
-              <a name="changelayout"><strong>Q:</strong>How do I change my site layout?</a> 
+              <a name="changelayout"><strong>Q:</strong>How do I design the layout of my site?</a> 
           <br />
          <strong>A:</strong> Layout...          </p>
            <p> <a href="#top"> Back to top </a></p>        
