added more content

--- a/sites/all/modules/vsite/vsitehelp/help/FAQ.html
+++ b/sites/all/modules/vsite/vsitehelp/help/FAQ.html
@@ -10,6 +10,7 @@
           <li> <a href="#getsite">How do I get a web site?</a> </li>
           <li> <a href="#login">Where do I log in?</a> </li>
           <li> <a href="#loginissues">What if I can't log into my account?</a> </li>
+          <li> <a href="#changepersonal"> Where can I add/edit my personal information?</a> </li>
            <li> <a href="#changepassword">How do I change my account password?</a> </li>
           <li> <a href="#feature">What is a feature?</a> </li>
           <li> <a href="#changefeature">How do I enable or disable features on my site?</a> </li>
@@ -62,6 +63,12 @@
             </p>
            <p> <a href="#top"> Back to top </a></p> 
            
+                  <p>
+              <a name="changepersonal"><strong>Q:</strong> Where can I add/edit my personal information?</a> 
+          <br />
+         <strong>A:</strong> You can add or edit you personal information... 
+            </p>
+           <p> <a href="#top"> Back to top </a></p> 
                       
                  <p>
               <a name="changepassword"><strong>Q:</strong> How do I change my account password?</a> 
