--- a/sites/all/modules/vsite/vsitehelp/help/FAQ.html
+++ b/sites/all/modules/vsite/vsitehelp/help/FAQ.html
@@ -9,9 +9,9 @@
           <li> <a href="#whosite">Who is eligible to get a site?</a> </li> 
           <li> <a href="#getsite">How do I get a web site?</a> </li>
           
-          <li> <a href="#files">How many files can I upload ?</a> </li>
-          <li> <a href="#specialprograms">Do I need any special program(s) ?</a> </li>
-          <li> <a href="#othersites">Can I create a site for my department/center/project ?</a> </li>
+          <li> <a href="#files">How many files can I upload?</a> </li>
+          <li> <a href="#specialprograms">Do I need any special programs?</a> </li>
+          <li> <a href="#othersites">Can I create a site for my department/center/project?</a> </li>
           <li> <a href="#host">Where are the web sites hosted?</a> </li>
           <li> <a href="#webtech"> Do I need to know HTML or other web technologies?</a> </li>
        
