--- a/sites/all/modules/vsite/vsitehelp/help/FAQ.html
+++ b/sites/all/modules/vsite/vsitehelp/help/FAQ.html
@@ -36,7 +36,7 @@
            <p> <a href="#top"> Back to top </a></p> 
             
             <p>
-              <a name="getsite"><strong>Q:</strong> How do I create a web site?</a> 
+              <a name="getsite"><strong>Q:</strong> How do I get a web site?</a> 
           <br />
          <strong>A:</strong>  You can get your web site by going to the Scholars' Web Sites Project front page and 
             clicking the 'Get Your Web Site!' button.  Submit your information in the form that appears and your should 
