--- a/sites/all/modules/vsite/vsitehelp/help/FAQ.html
+++ b/sites/all/modules/vsite/vsitehelp/help/FAQ.html
@@ -47,7 +47,7 @@
              <p>
               <a name="specialprograms"><strong>Q:</strong> Do I need any special programs?</a> 
           <br />
-         <strong>A:</strong> No, you can everything related to your site using your web browser.
+         <strong>A:</strong> No, you can do everything related to your site using your web browser.
             </p>
            <p> <a href="#top"> Back to top </a></p>
 
