--- a/sites/all/modules/vsite/vsitehelp/help/FAQ.html
+++ b/sites/all/modules/vsite/vsitehelp/help/FAQ.html
@@ -82,7 +82,7 @@
               <a name="design"><strong>Q:</strong> Can I design the look and layout of my site?</a> 
           <br />
          <strong>A:</strong> Yes, the Scholars' Web Sites Project comes with easy to use theming and layout tools which allow you 
-         design a unique and elegant web site. 
+         completely customize the design of your web site. 
             </p>
            <p> <a href="#top"> Back to top </a></p>
            
