--- a/sites/all/modules/vsite/vsitehelp/help/About-the-Project.html
+++ b/sites/all/modules/vsite/vsitehelp/help/About-the-Project.html
@@ -74,7 +74,7 @@
         <p><h4>Manage and Invite Users</h4>
         Maintain your own social network on your site. You can create user accounts for colleagues and other stakeholders
         and invite them to be members of you site. Collaborate on projects or exchange thoughts and ideas with your site's members.
-        You have full control of your site's member status and access to your site.      
+        You have full control of your site members' status and access to your site.      
         </p>
       
         <p><h4>Subscribe to Activity Rivers</h4>
