--- a/sites/all/modules/vsite/vsitehelp/help/About-the-Project.html
+++ b/sites/all/modules/vsite/vsitehelp/help/About-the-Project.html
@@ -33,7 +33,7 @@
       
         <p><h4>Built-In Flexible Themes</h4>
         Browse and choose from a variety of sleek web 2.0 themes with the Theme Picker tool. Each theme
-        has the flexibility to use unique color schemes, or flavors, to match your site's desired look and feel.       
+        has the flexibility to use distinct color schemes to match your site's desired look and feel.       
         </p>
       
         <p><h4>The Interactive Layout Tool</h4>
