--- a/sites/all/modules/vsite/vsitehelp/help/Project-Team.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Project-Team.html
@@ -15,7 +15,7 @@
 	</dd>
 	
 	<dd><a href="http://www.iq.harvard.edu/people/shaun_wolf_wortis">Shaun
-	Wortis </a> - Senior UI designer</dd>
+	Wortis </a> - Senior UI designer / developer</dd>
 	
 	<dd><a href="http://www.iq.harvard.edu/people/richard_brandon">Richard
 	Brandon </a> - Senior web developer </dd>
