--- a/sites/all/modules/vsite/vsitehelp/help/Managing-Your-Users.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Managing-Your-Users.html
@@ -39,7 +39,8 @@
      and have full administrative rights to your site.</p>
      
      <p>You can also revoke administrative privileges from a member by selecting "Remove administrator status" for the
-      corresponding member.     
+      corresponding member. The user will still retain membership to your site, but will not have full administrative
+      privileges.
      </p> 
     
           </div>
