Updated biblio module to v6.x-1.13 to fix issue documented at http://drupal.org/node/797954

--- a/sites/all/modules/contrib/biblio/changelog.html
+++ b/sites/all/modules/contrib/biblio/changelog.html
@@ -8,11 +8,19 @@
 <body>
 <div>
 
+<h3>6.x-1.13</h3>
+
+<b>Bugs Fixed...</b>
+<ul> 
+  <li><a href="http://drupal.org/node/797954">#797954</a> Anomymous users not authorised to access biblio entries</li>
+  <li><a href="http://drupal.org/node/797888">#797888</a> Syntax Error in biblio.db.trans.inc</li>
+</ul>
+
+<hr />
 <h3>6.x-1.12</h3>
 
 <b>Bugs Fixed...</b>
 <ul> 
-  <li></li>
   <li><a href="http://drupal.org/node/797382">#797382</a> Error on import</li>
   <li><a href="http://drupal.org/node/741176">#741176</a> Views arguments fixes</li>
 </ul>
