--- a/sites/all/modules/vsite/vsitehelp/help/Chosing-your-Overall-Theme.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Chosing-your-Overall-Theme.html
@@ -1,7 +1,7 @@
 <div id="node-74" class="node node-mine node-type-help">
   <div class="node-inner">
             <div class="content">
-      <p>Clicking on the Settings button in the Control Panel gives you a number of choices. One of them is the option of selecting a <strong>'Theme'</strong>. 'Themes' are visual presentations of a particular look and feel and you have the option of choosing any of these, indeed you can change themes at will. Changing the theme only effects the look and feel of your site, but not the content you've created.</p>
+      <p>Clicking on the <strong>Appearance</strong> button in the Control Panel gives you a number of choices. One of them is the option of selecting a <strong>'Theme'</strong>. 'Themes' are visual presentations of a particular look and feel and you have the option of choosing any of these, indeed you can change themes at will. Changing the theme only effects the look and feel of your site, but not the content you've created.</p>
       <p>Additionally, should you choose to have a web designer design a custom theme available to only you, your custom theme will appear to only you in this area of the Control Panel.</p>
       <p><strong>To choose a theme in the control panel</strong>, navigate through the available themes but way of the numbered menu above the screenshot images. To select a theme, click on the screenshot itself (a red border will appear), and then click the 'Save' button.</p>
       <h4>Flavors</h4>
