--- a/sites/all/modules/vsite/vsitehelp/help/My-Account.html
+++ b/sites/all/modules/vsite/vsitehelp/help/My-Account.html
@@ -5,7 +5,7 @@
             <p>           
             <h3>Changing your account information</h3>
             <p>You can change your email address or password at any time. <br />
-            After you click <strong>Save</strong>, the changes will take affect immediately.</p>
+            After you click <strong>Save</strong>, the changes will take effect immediately.</p>
               </div>
       </div> <!-- /node-inner -->
 </div> <!-- /node -->
