--- a/sites/all/modules/vsite/vsitehelp/help/FAQ.html
+++ b/sites/all/modules/vsite/vsitehelp/help/FAQ.html
@@ -5,7 +5,7 @@
             <div class="content">
 
     <ul class="faq">
-          <li>  <a href="#project">What is the Scholars' Web Sites Project?</a>  </li>
+          <li>  <a href="#project">What is OpenScholar?</a>  </li>
           <li> <a href="#whosite">Who is eligible to get a site?</a> </li> 
           <li> <a href="#getsite">How do I get a web site?</a> </li>                   
           <li> <a href="#specialprograms">Do I need any special programs?</a> </li>
@@ -19,18 +19,18 @@
     </ul>
 
                 <p>
-             <a name="project"><strong>Q:</strong> What the is Scholars' Web Sites Project?</a>
+             <a name="project"><strong>Q:</strong>What is OpenScholar?</a>
               <br />
-             <strong>A:</strong> The Scholars' Web Sites Project is a highly customizable web site building and content management tool 
+             <strong>A:</strong>OpenScholar is a highly customizable web site building and content management tool 
              intended for academic scholars, faculty and graduate students.
              </p>
            <p><a href="#top"> Back to top </a></p> 
            
                
               <p>
-              <a name="whosite"><strong>Q:</strong> Who is eligible to get a site?</a> 
+              <a name="whosite"><strong>Q:</strong>Who is eligible to get a site?</a> 
           <br />
-         <strong>A:</strong> The Scholars' Web Sites Project is intended for Harvard affiliated scholars, faculty, 
+         <strong>A:</strong>OpenScholar is intended for Harvard affiliated scholars, faculty, 
          and graduate students. You must have a valid Harvard ID in order to get a site.
             </p>
            <p> <a href="#top"> Back to top </a></p> 
@@ -38,7 +38,7 @@
             <p>
               <a name="getsite"><strong>Q:</strong> How do I get a web site?</a> 
           <br />
-         <strong>A:</strong>  You can get your web site by going to the Scholars' Web Sites Project front page and 
+         <strong>A:</strong>  You can get your web site by going to the OpenScholar front page and 
             clicking the 'Get Your Web Site!' button.  Submit your information in the form that appears and your should 
             see a confirmation that your web site has been created.
             </p>
@@ -63,7 +63,7 @@
                 <p>
               <a name="othersites"><strong>Q:</strong> Can I create a site for my department/center/project?</a> 
           <br />
-         <strong>A:</strong> It is possible, but not recommended because The Scholars' Web Sites Project is 
+         <strong>A:</strong> It is possible, but not recommended because OpenScholar is 
          geared towards individual scholars' web sites. However, there is a special "Projects" distribution which 
          is designed for this purpose. You can find it at: 
          <a href="http://projects.iq.harvard.edu/"> http://projects.iq.harvard.edu </a>
@@ -75,7 +75,7 @@
                <p>
               <a name="host"><strong>Q:</strong> Where are the web sites hosted?</a> 
           <br />
-         <strong>A:</strong> The Scholars' Web Sites Project web sites are hosted at The Institute for Quantitative
+         <strong>A:</strong>OpenScholar web sites are hosted at The Institute for Quantitative
          Social Science at Harvard University.
             </p>
            <p> <a href="#top"> Back to top </a></p>
@@ -84,7 +84,7 @@
             <p>
               <a name="design"><strong>Q:</strong> Can I design the look and layout of my site?</a> 
           <br />
-         <strong>A:</strong> Yes, the Scholars' Web Sites Project comes with easy to use theming and layout tools which allow you 
+         <strong>A:</strong> Yes, OpenScholar comes with easy to use theming and layout tools which allow you 
          to completely customize the design of your site. 
             </p>
            <p> <a href="#top"> Back to top </a></p>
