--- a/sites/all/modules/vsite/vsitehelp/help/FAQ.html
+++ b/sites/all/modules/vsite/vsitehelp/help/FAQ.html
@@ -75,8 +75,8 @@
                <p>
               <a name="host"><strong>Q:</strong> Where are the web sites hosted?</a> 
           <br />
-         <strong>A:</strong>OpenScholar web sites are hosted at The Institute for Quantitative
-         Social Science at Harvard University.
+         <strong>A:</strong>The web sites for OpenScholar installations (scholar.harvard.edu and 
+         projects.harvard.edu) are hosted at The Institute for Quantitative Social Science at Harvard University.
             </p>
            <p> <a href="#top"> Back to top </a></p>
            
