--- a/sites/all/modules/vsite/vsitehelp/help/Pages-feature.html
+++ b/sites/all/modules/vsite/vsitehelp/help/Pages-feature.html
@@ -1,7 +1,7 @@
 <div id="node-59" class="node node-mine node-type-help">
   <div class="node-inner">
             <div class="content">
-      <p>The Pages feature offers the ability to post miscellanoues web pages of your choice, sort of like a "blank canvas". Perhaps you would like to post your office hours, your departmental contact information, or a message to web site visitors.</p>
+      <p>The Pages feature offers the ability to post miscellaneous web pages of your choice, sort of like a "blank canvas". Perhaps you would like to post your office hours, your departmental contact information, or a message to web site visitors.</p>
 <p><strong>Creating and Viewing Pages</strong></p>
 <p>Pages are a special content type and can only be added through the Control Panel.<strong><br /></strong></p>
 <p>To add a page, navigate to the Control Panel and click on the "Content" button . On the left column you will see a "Page" link. Clicking here will display all, or any, of your existing page posts. From this screen, click the "+Add Page" link and begin entering contents of your page.</p>
