--- a/sites/all/modules/openscholar_vsite/vsitehelp/help/Project-Team.html
+++ b/sites/all/modules/openscholar_vsite/vsitehelp/help/Project-Team.html
@@ -18,7 +18,7 @@
 	Brandon </a> - Senior web developer </dd>
 
 	<dd><a href="http://www.iq.harvard.edu/people/joseph_weiner">
-	Joseph Weinner </a> - Web developer</dd>
+	Joseph Weiner </a> - Web developer</dd>
 
 	<dd><a href="http://www.iq.harvard.edu/people/shaun_wolf_wortis">Shaun
 	Wortis </a> - Senior UI designer / developer</dd>
