add support for rtf and upgrade biblio

--- a/sites/all/modules/contrib/biblio/changelog.html
+++ b/sites/all/modules/contrib/biblio/changelog.html
@@ -8,6 +8,25 @@
 <body>
 <div>
 
+<h3>6.x-1.14</h3>
+<b>New features...</b>
+<ul> 
+  <li><a href="http://drupal.org/node/159325#comment-2808722">#159325</a> Added Rich Text Format (RTF) export capability and links</li>
+  <li><a href="http://drupal.org/node/836072">#836072</a> Enhanced the user interface to include more feedback durring batch file imports.  Feedback includes the current and total number of nodes to import and an estimated time to completion.</li>
+  
+</ul>
+<b>Bugs Fixed...</b>
+<ul> 
+  <li><a href="http://drupal.org/node/832532">#832532</a> Recent filefield security upgrade to filefield 6.x-3.5 breaking my biblio views</li>
+  <li><a href="http://drupal.org/node/836522">#836522</a> Keyword(s) not linked to biblio item when adding taxonomy(ies) term(s)</li>
+  <li><a href="http://drupal.org/node/838208">#838208</a> Keyword value is not displayed on filter page</li>
+  <li><a href="http://drupal.org/node/833716">#833716</a> Issue with commit #362416 (redirect causing SEO issues)</li>
+  <li><a href="http://drupal.org/node/801996">#801996</a> w3c validation issue when citing a reference from the bibliography</li>
+  <li><a href="http://drupal.org/node/820404">#820404</a> Wrong column biblio_volumne in file biblio.import.export.inc</li>
+  <li><a href="http://drupal.org/node/818810">#818810</a> upgrade + fields settings = broken forms?</li>
+  <li><a href="http://drupal.org/node/798922">#798922</a> Crossref settings missing in profile</li>
+</ul>
+<hr />
 <h3>6.x-1.13</h3>
 
 <b>Bugs Fixed...</b>
