gary taxonomy plus attempt to speed up font rendering

--- a/sites/all/themes/custom/gking/fonts/demo.html
+++ b/sites/all/themes/custom/gking/fonts/demo.html
@@ -8,37 +8,64 @@
 	<title>Font Face Demo</title>
 	<link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8">
 	<style type="text/css" media="screen">
-
-		h1 {
-			font-size: 60px;
-			font-family: Arial, sans-serif;}
-		
-		.sample {
-			font-size: 24px;
-			font-family: 'ExpresswayRgRegular',Arial,sans-serif;
+			body {
+			font-family: Helvetica, Arial, sans-serif;
+			color: #333333;
+			background-color: #ffffff;
 			}
+		.ExpresswayRgRegular {
+			font-weight: normal;
+			font-style: normal;
+			line-height:normal;
+			font-family: 'ExpresswayRegular', sans-serif;
+			font-size-adjust: 0.53;
+		}
 		
-		?>
-		
+		.size {
+			font-family: Helvetica, Arial, sans-serif;
+			font-weight: normal;
+			font-style: normal;
+			font-size: 11px;
+		}
 		#container {
 			width: 800px;
 			margin-left: auto;
 			margin-right: auto;
+			overflow: hidden;
+			
+		}
+		.samplebox {
+			white-space:nowrap;
+			margin-top:10px;
+			margin-bottom: 0px;
 		}
 	</style>
 </head>
 
 <body>
 	<div id="container">
-	<h1>Webfont Demo</h1>
 	
-	<p>To use the kit, include the <a href="stylesheet.css">stylesheet.css</a> file in your HTML and wherever you want to use the font insert:</p>
 	
-	<code>font-family: 'ExpresswayRgRegular',Arial,sans-serif;</code>
 	
-	<p class='sample'>
-		The quick brown fox jumps over the lazy dog.
-	</p>
-	</div>
+	 
+	<h1 class="ExpresswayRgRegular">Expressway Regular</h1>
+	<p class="size"><strong>Additional Specs:</strong> font-size-adjust: 0.53;</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:72px;"><span class="size">72 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:60px;"><span class="size">60 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:48px;"><span class="size">48 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:36px;"><span class="size">36 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:30px;"><span class="size">30 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:24px;"><span class="size">24 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:21px;"><span class="size">21 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:18px;"><span class="size">18 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:17px;"><span class="size">17 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:16px;"><span class="size">16 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:15px;"><span class="size">15 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:14px;"><span class="size">14 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:13px;"><span class="size">13 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:12px;"><span class="size">12 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:11px;"><span class="size">11 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="ExpresswayRgRegular samplebox" style="font-size:10px;"><span class="size">10 </span>The five boxing wizards jump quickly. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
 </body>
 </html>
